--- a/css/accordion.css
+++ b/css/accordion.css
@@ -1,7 +1,7 @@
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
-  background-color: #eee;
-  color: #444;
+  background-color: #ffffff ;
+  color: #000000;
   cursor: pointer;
   padding: 18px;
   width: 100%;
@@ -9,6 +9,7 @@
   border: none;
   outline: none;
   transition: 0.4s;
+  font-size: 15px;
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
