--- a/css/accordion.css
+++ b/css/accordion.css
@@ -8,6 +8,7 @@
   transition: 0.4s;
   background-color: #fff;
   padding:10px;
+  margin:0px;
   font: 14px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color:#595959;
   font-weight:400;
