--- a/css/accordion.css
+++ b/css/accordion.css
@@ -26,3 +26,13 @@
   display: none;
   overflow: hidden;
 }
+
+.accordion:after {
+      font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f107";
+
+}
+
+.active:after {
+      font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f106";
+
+}
