--- a/css/accordion.css
+++ b/css/accordion.css
@@ -11,7 +11,7 @@
   font: 14px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color:#595959;
   font-weight:400;
-  padding:50px;
+  padding:10px;
   color:#595959;
 }
 
@@ -29,11 +29,11 @@
 }
 
 .accordion:after {
-      font-family: "Font Awesome 5 Free"; font-weight: 400;  font-style: normal; font-variant: normal; content: "Show abstract \f107";
+      font-family: "Font Awesome 5 Free"; font-weight: 400;  content: "Show abstract \f107";
 
 }
 
 .active:after {
-      font-family: "Font Awesome 5 Free"; font-weight: 400;  font-style: normal; font-variant: normal; content: "Hide abstract \f106";
+      font-family: "Font Awesome 5 Free"; font-weight: 400;   content: "Hide abstract \f106";
 
 }
